Add rakaly post script