@@ -4,8 +4,7 @@ import com.crschnick.pdxu.app.core.ErrorHandler;
 import com.crschnick.pdxu.app.core.PdxuInstallation;
 import com.crschnick.pdxu.app.core.TaskExecutor;
 import com.crschnick.pdxu.app.core.settings.Settings;
-import com.crschnick.pdxu.app.gui.dialog.GuiErrorReporter;
-import com.crschnick.pdxu.app.savegame.SavegameActions;
+import com.crschnick.pdxu.app.savegame.SavegameContext;
 import com.crschnick.pdxu.app.savegame.SavegameEntry;
 import com.crschnick.pdxu.app.util.Hyperlinks;
 import com.crschnick.pdxu.app.util.ThreadHelper;
@@ -13,10 +12,51 @@ import javafx.scene.control.Alert;
 import javafx.scene.control.Button;
 import javafx.scene.control.ButtonBar;
 import javafx.scene.control.ButtonType;
+import org.apache.commons.io.FileUtils;
+
+import java.io.BufferedOutputStream;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
+import java.util.ArrayList;
+import java.util.List;
 
 import static com.crschnick.pdxu.app.gui.dialog.GuiDialogHelper.createAlert;
 
 public class RakalyWebHelper {
+
+    private static void writeJsBlob(byte[] bytes) throws IOException {
+        List<byte[]> byteMap = new ArrayList<>(256);
+        for (int i = 0; i < 256; i++) {
+            byteMap.add(String.valueOf(i).getBytes(StandardCharsets.UTF_8));
+        }
+
+        var file = FileUtils.getTempDirectory().toPath().resolve("pdxu_rakaly_blob.js");
+        try (var out = new BufferedOutputStream(Files.newOutputStream(file), 10000000)) {
+            out.write("""
+                    function createFile() {
+                        var data = new Uint8Array([
+                            """.getBytes(StandardCharsets.UTF_8));
+
+            for (int i = 0; i < bytes.length; i++) {
+                out.write(byteMap.get(Byte.toUnsignedInt(bytes[i])));
+                out.write(',');
+                if (i % 64 == 0) {
+                    out.write('\n');
+                }
+            }
+
+            out.write("""
+                    
+                        ]);
+                        return new File(data, "test.eu4", {
+                            type: "application/zip",
+                        })
+                    }
+                    """.getBytes(StandardCharsets.UTF_8));
+        }
+    }
 
     public static void showUsageDialog() {
         Alert alert = createAlert();
@@ -50,24 +90,12 @@ public class RakalyWebHelper {
 
         TaskExecutor.getInstance().submitTask(() -> {
             try {
-                var copy = SavegameActions.exportToTemp(entry, false).orElseThrow();
-                var proc = new ProcessBuilder(
-                        PdxuInstallation.getInstance().getRakalyExecutable().toString(),
-                        "upload",
-                        "--user", Settings.getInstance().rakalyUserId.getValue(),
-                        "--api-key", Settings.getInstance().rakalyApiKey.getValue(),
-                        copy.toString())
-                        .redirectErrorStream(true)
-                        .start();
-                var out = new String(proc.getInputStream().readAllBytes());
-                proc.waitFor();
-                if (proc.exitValue() != 0) {
-                    GuiErrorReporter.showSimpleErrorMessage(out);
-                } else {
-                    out.lines().findFirst().ifPresent(l -> {
-                        ThreadHelper.browse("https://rakaly.com/eu4/saves/" + l);
-                    });
-                }
+                var bytes = Files.readAllBytes(
+                        SavegameContext.getContext(entry).getStorage().getSavegameFile(entry));
+                writeJsBlob(bytes);
+                var toOpen = Files.copy(PdxuInstallation.getInstance().getResourceDir().resolve("res").resolve("rakaly.html"),
+                        FileUtils.getTempDirectory().toPath().resolve("pdxu_rakaly.html"), StandardCopyOption.REPLACE_EXISTING);
+                ThreadHelper.open(toOpen);
             } catch (Exception e) {
                 ErrorHandler.handleException(e);
             }
